@@ -101,8 +101,7 @@ public class ModelExampleUtil {
 
                     // redact possible credential
                     if (elementType == ClassType.STRING && entry.getValue() instanceof String) {
-                        value = ModelTestCaseUtil.redactStringValue(Collections.singletonList(entry.getKey()),
-                            (String) value);
+                        value = ModelTestCaseUtil.redactStringValue(List.of(entry.getKey()), (String) value);
                     }
 
                     ExampleNode childNode = parseNode(elementType, value);
@@ -122,7 +121,7 @@ public class ModelExampleUtil {
                 if (model.isPolymorphic()) {
                     // polymorphic, need to get the correct subclass from discriminator
                     String serializedName = model.getPolymorphicDiscriminatorName();
-                    List<String> jsonPropertyNames = Collections.singletonList(serializedName);
+                    List<String> jsonPropertyNames = List.of(serializedName);
                     if (model.getNeedsFlatten()) {
                         jsonPropertyNames = ClientModelUtil.splitFlattenedSerializedName(serializedName);
                     }
